k8s/prod/ml-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: astramind
spec:
  selector:
    app: ml-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
